fix book size align when resize BookList

--- a/src/components/book-list/styles.css
+++ b/src/components/book-list/styles.css
@@ -239,8 +239,9 @@ body {
 .book .image__not_found {
   max-width: 100%;
   max-height: 100%;
-  padding: 3%;
-  margin: 3%;
+  padding: 0.5em 0.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .book_short-info {
